# rubric

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml
config/: llm_config.json
docs/: _config.yml  index.md
docs/code-analysis/: architecture-report.md  feature-report.md  judge-report.md  mapper-report.md  orchestrator-final-synthesis.md  orchestrator-phase-1-scout.md  orchestrator-phase-2-mapper.md  orchestrator-phase-3-feature.md  orchestrator-phase-4-architecture.md  orchestrator-phase-5-trace.md  orchestrator-phase-6-judge.md  scout-report.md  trace-report.md
examples/: basic_story.py
src/rubric/: __init__.py  cli.py  orchestrator.py  settings.py
src/rubric/agents/: __init__.py  architect.py  base.py  developer.py  devops.py  product_owner.py  reviewer.py  scrum_master.py  test_writer.py
src/rubric/context/: __init__.py  manager.py
src/rubric/engine/: __init__.py  event_logger.py  scheduler.py  transitions.py  workflow.py
src/rubric/llm/: __init__.py  config.py  providers.py
src/rubric/models/: __init__.py  agent.py  artifacts.py  protocols.py  story.py
src/rubric/persistence/: __init__.py  json_store.py
tests/: conftest.py  test_agents.py  test_cli.py  test_engine.py  test_models.py  test_orchestrator.py  test_rubric.py  test_settings.py
