[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rubric"
version = "0.1.0"
description = "Rubric — multi-agent workflow engine for large-scale application delivery"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
rubric = "rubric.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rubric"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
